--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "cxlt-vue2-toastr": "^1.1.1",
     "firebase": "^7.14.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
